[metadata]
name = CMIT
version = attr: cmit.__version__
author = Bigelow Systems, LLC.
author_email = engineering+cmit@bigelow.systems
description = A text-based protocol to support internal process communication (IPC) within a single node.
long_description = file: README.rst
long_description_content_type = text/rst
license = BSD 3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = cmit
zip_safe = False
